# spectra-db

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
data/db/: spectra.duckdb  spectra_molecular.duckdb
data/normalized/: asd_spectra_levels.txt  asd_spectra_lines.txt  isotopologues.ndjson  refs.ndjson  species.ndjson  states.ndjson
data/normalized_molecular/: isotopologues.ndjson  parameters.ndjson  refs.ndjson  species.ndjson  states.ndjson  webbook_ingested.ndjson
data/raw/nist_asd/: bulk_checkpoint.jsonl
docs/: README.md  index.md  reference.md  repo_readme.md
docs/dev/: contributing.md  data_layout.md
examples/: asd_demo.py  co_diatomic_constants.json  molecular_demo.py  webbook_debug.html  webbook_discovery_debug.py
examples/examples/: h_i_bundle.json
scripts/: bootstrap_db.py  query.py
src/spectra_db/: __init__.py  __main__.py  assets.py  cli.py  db_query.py  sources.py
src/spectra_db/db/: duckdb_store.py  schema.sql  schema_molecular.sql
src/spectra_db/query/: __init__.py  api.py  export.py
src/spectra_db/scrapers/common/: http.py  ndjson.py
src/spectra_db/scrapers/exomol/: fetch_exomol.py  normalize_exomol.py
src/spectra_db/scrapers/nist_asd/: bulk_ingest.py  enrich_refs.py  fetch_levels.py  fetch_lines.py  normalize_atomic.py  parse_levels.py
src/spectra_db/scrapers/nist_webbook/: bulk_ingest_diatomics.py  fetch_webbook.py  normalize_cache.py  normalize_diatomic_constants.py
src/spectra_db/util/: __init__.py  asd_spectrum.py  paths.py
tests/: conftest.py  test_asd_spectrum_parsing.py  test_asd_spectrum_roman_large.py  test_assets_autoprovision.py  test_bootstrap_autoprovision_sources.py  test_bulk_ingest_adaptive_split.py  test_cli_query_flags.py  test_duckdb_bootstrap_truncate_all_idempotent.py  test_enrich_refs_parsing.py  test_fetch_levels_run_normalization.py  test_fetch_lines_run_normalization.py  test_imports.py  test_nist_asd_spectrum.py  test_parse_levels_response.py  test_parse_lines_response.py  test_paths_resolution.py  test_query_api_exact_species.py  test_query_api_levels_lines.py  test_query_smoke.py  test_ref_url_capture.py  test_schema.py  test_webbook_normalize_cache.py  test_webbook_normalize_diatomic_constants.py
tools/scrapers/common/: ids.py
tools/scrapers/exomol/: fetch_exomol.py  normalize_exomol.py
tools/scrapers/nist_asd/: asd_client.py  bulk_ingest.py  enrich_refs.py  fetch_levels.py  fetch_lines.py  list_spectra.py  normalize_atomic.py  parse_lines.py
tools/scrapers/nist_webbook/: bulk_ingest_diatomics.py  fetch_webbook.py  normalize_cache.py  normalize_diatomic_constants.py
