[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-db"
version = "0.0.3"
description = "Local-first spectroscopy database + query API backed by DuckDB."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Rees Verleur"}]

dependencies = [
  "duckdb>=0.10",
  "pandas>=2.1",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
scrape = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "html5lib>=1.1",
]
assets = ["spectra-db-assets==0.0.2"]
sources = ["spectra-db-sources==0.0.2"]


docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings>=0.25",
  "mkdocstrings-python>=1.10",
]

dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "types-requests>=2.31",
]

# Note: pip can only resolve this automatically if spectra-db-assets is available on an index.
# For GitHub Releases, users will install the assets wheel by URL.

[project.scripts]
spectra-db = "spectra_db.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spectra_db*"]

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
